[gd_scene load_steps=12 format=2]

[ext_resource path="res://mo/Shape/shape1.svg" type="Texture" id=1]
[ext_resource path="res://mo/Image/image 3.png" type="Texture" id=2]
[ext_resource path="res://mo/Shape/shape15.svg" type="Texture" id=3]
[ext_resource path="res://Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://mo/Font/ArialNova.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://mo/Image/image 5.png" type="Texture" id=8]
[ext_resource path="res://mo/Image/image 7.png" type="Texture" id=9]
[ext_resource path="res://mo/Image/image 6.png" type="Texture" id=10]
[ext_resource path="res://Base.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="TopBox" type="Node2D" parent="."]
position = Vector2( 31, 13 )

[node name="Box1" type="Sprite" parent="TopBox"]
position = Vector2( 362.722, 63.5956 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="TopBox"]
margin_left = 38.0
margin_top = 27.0
margin_right = 684.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stebėdami MO, susipažinsite su augalo ląstele. Tai – mažiausia augalo organizmo dalelė. Schemiškai pavaizduotoje augalo ląstelėje pamatysite membraną, branduolį ir citoplazmą. Augalo ląstelė dar turi sienelę, vakuolę ir chloroplastus. "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Node2D" parent="."]
position = Vector2( 63, 21 )
script = ExtResource( 11 )

[node name="CellSprite" type="Sprite" parent="Base"]
position = Vector2( 496, 290 )
texture = ExtResource( 2 )

[node name="DescriptionBox" type="Label" parent="Base"]
margin_left = 23.0
margin_top = 336.0
margin_right = 324.0
margin_bottom = 487.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WallButton" parent="Base" instance=ExtResource( 5 )]
margin_left = 20.0
margin_top = 140.0
margin_right = 197.0
margin_bottom = 160.0
text = "  Sienelė"
text_input = "Sienelė yra virš membranos. Ji labai tvirta, todėl ne tik apsaugo ląstelę, bet ir išlaiko formą."

[node name="Arrow1" type="Sprite" parent="Base/WallButton/Arrows" index="0"]
position = Vector2( 577.778, 261.351 )
texture = ExtResource( 8 )

[node name="Arrow2" type="Sprite" parent="Base/WallButton/Arrows" index="1"]
position = Vector2( 302.458, 238.504 )
texture = ExtResource( 9 )

[node name="Arrow3" type="Sprite" parent="Base/WallButton/Arrows" index="2"]
position = Vector2( 311.336, 31.6135 )
texture = ExtResource( 10 )

[node name="MembraneButton" parent="Base" instance=ExtResource( 5 )]
margin_left = 20.0
margin_top = 165.0
margin_right = 197.0
margin_bottom = 185.0
text = "  Membrana"
text_input = "Ląstelės membrana – plonas apvalkalėlis, reguliuojantis reikalingų medžiagų patekimą į ląstelės vidų ir nereikalingų pašalinimą iš jos."

[node name="Arrow2" type="Sprite" parent="Base/MembraneButton/Arrows" index="0"]
position = Vector2( 311.458, 189.504 )
texture = ExtResource( 9 )

[node name="CoreButton" parent="Base" instance=ExtResource( 5 )]
margin_left = 20.0
margin_top = 190.0
margin_right = 197.0
margin_bottom = 210.0
text = "  Branduolys"
text_input = "Branduolys – ląstelės „valdymo centras“. Jame saugoma informacija, kokias medžiagas ląstelė turi gaminti ir kaip turi atrodyti visas organizmas."

[node name="Arrow1" type="Sprite" parent="Base/CoreButton/Arrows" index="0"]
position = Vector2( 549.91, 113.12 )
texture = ExtResource( 8 )

[node name="CytoplasmButton" parent="Base" instance=ExtResource( 5 )]
margin_left = 20.0
margin_top = 215.0
margin_right = 197.0
margin_bottom = 235.0
text = "  Citoplazma"
text_input = "Citoplazma – tąsi masė ląstelės viduje. Joje nuolat vyksta cheminės reakcijos, gaminamos ir perdirbamos organinės medžiagos."

[node name="Arrow1" type="Sprite" parent="Base/CytoplasmButton/Arrows" index="0"]
position = Vector2( 493.759, 142.785 )
texture = ExtResource( 8 )

[node name="Arrow3" type="Sprite" parent="Base/CytoplasmButton/Arrows" index="1"]
position = Vector2( 348.095, -45.6335 )
texture = ExtResource( 10 )

[node name="VacuoleButton" parent="Base" instance=ExtResource( 5 )]
margin_left = 20.0
margin_top = 240.0
margin_right = 197.0
margin_bottom = 260.0
text = "  Vakuolė"
text_input = "Didelė vakuolė, pilna skysčio, vadinamo ląstelių sultimis."

[node name="Arrow3" type="Sprite" parent="Base/VacuoleButton/Arrows" index="0"]
position = Vector2( 408.485, -89.0715 )
texture = ExtResource( 10 )

[node name="ChloroplastButton" parent="Base" instance=ExtResource( 5 )]
margin_left = 20.0
margin_top = 265.0
margin_right = 197.0
margin_bottom = 285.0
text = "  Chloroplastai"
text_input = "Chloroplastuose esantis chlorofilas sugeria saulės spindulius. Juose vyksta fotosintezė."

[node name="Arrow1" type="Sprite" parent="Base/ChloroplastButton/Arrows" index="0"]
position = Vector2( 631.127, 34.7749 )
texture = ExtResource( 8 )

[node name="Arrow2" type="Sprite" parent="Base/ChloroplastButton/Arrows" index="1"]
position = Vector2( 326.141, 57.4848 )
texture = ExtResource( 9 )

[node name="Arrow3" type="Sprite" parent="Base/ChloroplastButton/Arrows" index="2"]
position = Vector2( 395.409, -140.93 )
texture = ExtResource( 10 )

[connection signal="hover" from="Base/WallButton" to="Base" method="_on_WallButton_hover"]
[connection signal="hover" from="Base/MembraneButton" to="Base" method="_on_MembraneButton_hover"]
[connection signal="hover" from="Base/CoreButton" to="Base" method="_on_CoreButton_hover"]
[connection signal="hover" from="Base/CytoplasmButton" to="Base" method="_on_CytoplasmButton_hover"]
[connection signal="hover" from="Base/VacuoleButton" to="Base" method="_on_VacuoleButton_hover"]
[connection signal="hover" from="Base/ChloroplastButton" to="Base" method="_on_ChloroplastButton_hover"]

[editable path="Base/WallButton"]
[editable path="Base/MembraneButton"]
[editable path="Base/CoreButton"]
[editable path="Base/CytoplasmButton"]
[editable path="Base/VacuoleButton"]
[editable path="Base/ChloroplastButton"]
